z-index button fixed

--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -14,4 +14,5 @@
     color: rgba(255, 255, 245, 0.86);
     background-color: rgb(18, 18, 18);
     cursor: pointer;
+    z-index: 3;
 }
